--- a/Documents/latex_std_template.tex
+++ b/Documents/latex_std_template.tex
@@ -220,7 +220,6 @@ interface IClientServable
   
 \end{lstlisting}
 
-
 \subsection*{Dependency Inversion principle}
 
 Here is a break on the Dependency Inversion principle, where another class, the \texttt{Logger} class is being composed by the \texttt{Worker} class to enable use of logging.
@@ -230,6 +229,111 @@ Here is a break on the Dependency Inversion principle, where another class, the 
   \includegraphics{../out/Documents/plantuml/exercise4_dependency_inversion/exercise4_dependency_inversion.png}
   \caption{The worker uses the Logger class throughout its lifecycle}
 \end{figure}
+
+\pagebreak
+\section*{Solutions to the examples of broken SOLID principles}
+
+\subsection*{Single Responsibility principle}
+
+We split the monolith class into different classes based upon which methods share the same context of kind of responsibility.
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.5]{../out/Documents/plantuml/exercise5_single_responsibility/exercise5_single_responsibility.png}
+\end{figure}
+
+\subsection*{Open/closed principle}
+
+We disallow the Dog sub class to be able to override the \texttt{IsLiving()} method and \texttt{Living : bool} field from the Animal super class.
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.65]{../out/Documents/plantuml/exercise5_open_closed/exercise5_open_closed.png}
+\end{figure}
+
+\pagebreak
+\subsection*{Liskov's substitution principle}
+
+We fix the violation of the principle by using inheritance:
+
+\begin{lstlisting}[language=Java]
+
+  abstract class Animal
+  {
+    public virtual void Report();
+  }
+
+  class Dog : Animal
+  {
+      public void Report()
+      {
+          Console.WriteLine("I'm a dog!");
+      }
+  }
+  
+  class Cat : Animal
+  {
+      public void Report()
+      {
+          Console.WriteLine("I'm a cat!);
+      }
+  }
+  
+  class AnimalFactory
+  {
+      public void reportAnimal(Animal animal)
+      {
+          Animal.Report();
+      }
+  }
+  \end{lstlisting}
+
+
+\pagebreak
+\subsection*{Interface segregation principle}
+
+We fix the violation of the interface segregation principle by separating the giant monolithic interface smaller interfaces with higher cohesion:
+
+\begin{lstlisting}[language=Java]
+  interface IReportable
+  {
+    Report GetReport(int id);
+    Report[] AllReports();
+  }
+
+  interface ICalculateable
+  {
+    int64 CalculateMonthlyPaycheckSum();
+    int64 CalculateMonthlyCostsForHousing();
+  }
+
+  interface IEmployeeQueryable
+  {
+    Employee GetEmployee(int id);
+    Employee[] AllEmployees();
+  }
+
+  interface IDbConfigurable
+  {
+    void SetDbContext(DBContext context);
+  }
+
+  interface ILoggerConfigurable
+  {
+    void SetLogger(Logger logger);
+  }
+\end{lstlisting}
+
+\pagebreak
+\subsection*{Dependency Inversion principle}
+
+We employ constructer dependency injection to dynamically set the logger to use that implements the \texttt{ILoggerable} interface.
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.65]{../out/Documents/plantuml/exercise5_dependency_inversion/exercise5_dependency_inversion.png}
+\end{figure}
+
 
 \end{document}
 
